--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <h1>A Simple Button In Three Acts</h1>
     <head>
     </head>
-    <body style = 'background-color: #030303; color: #ea7200'>
-        <p id = 'vis'>Initial Value</p>
+    <body style = 'background-color: #030303; color: #ea7200; text-align: center'>
+        <p id = 'vis' style = 'padding-top: 20%; font-size: 30px'>Initial Act</p>
         <input type = 'button' id = 'a' value = 'Click' style = 'background-color: #0d0d0d; color: #ea7200;'>
         <script>
             const vis = document.getElementById('vis');
             document.getElementById('a').addEventListener('click', () => {
-                vis.innerHTML === 'Initial Value' ? vis.innerHTML = 'Secondary Value' 
-                : vis.innerHTML === 'Secondary Value' ? vis.innerHTML = 'Third Value' 
-                :vis.innerHTML = 'Initial Value';
+                vis.innerHTML === 'Initial Act' ? vis.innerHTML = 'Secondary Act' 
+                : vis.innerHTML === 'Secondary Act' ? vis.innerHTML = 'Third Act' 
+                :vis.innerHTML = 'Initial Act';
             });
         </script>
     </body>
