added pre and code tags.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <head>
     </head>
     <body style = 'background-color: #030303; color: #ea7200; text-align: center'>
-        <p id = 'vis' style = 'padding-top: 5%; font-size: 30px'><strong>Initial</strong> <emphasis>Act</emphasis></p>
+        <p id = 'vis' style = 'padding-top: 5%; font-size: 30px'><strong>Initial</strong> <em>Act</em></p>
         <input type = 'button' id = 'a' value = 'Click' style = 'background-color: #0d0d0d; color: #ea7200;'>
         <div style = 'padding-top: 5%'>
             <a href = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7fjKw_q87mLXob3kf7PS_X0LkCffd5EhSs6cQHp0lR-sBfnkRaA&s' target = '_blank'>
                 <img src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7fjKw_q87mLXob3kf7PS_X0LkCffd5EhSs6cQHp0lR-sBfnkRaA&s'>
             </a>
-            
         </div>
-        
+        <pre>What      is      this</pre>
+        <code>const square = num => { return num** }</code>
         <script>
             const vis = document.getElementById('vis');
             document.getElementById('a').addEventListener('click', () => {
